Loic mavah Design

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
    <link href="css/main.css" rel="stylesheet">
+   <link rel="stylesheet" href="css/testmonial.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -32,6 +33,9 @@
                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
+                   <a class="nav-link " href="services.html">Our services</a>
+                </li>
+                <li class="nav-item">
                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
@@ -41,8 +45,11 @@
                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             <li class="nav-item">
-             <a class="nav-link" href="faq.html">FaQ</a>
+             <a class="nav-link" href="login.html">Log in</a>
            </li>
+           <li class="nav-item">
+            <a class="nav-link" href="singup.html">Sing Up</a>
+          </li>
              </ul>
           </div>
       </div>
@@ -115,103 +122,50 @@
             </div>
             <!-- /.row -->
         </div>
-        <!-- Portfolio Section -->
-        <div class="portfolio-main">
-            <h2>Our Portfolio</h2>
-            <div class="row">
-               <div class="col-lg-4 col-sm-6 portfolio-item">
-                  <div class="card h-100">
-                     <div class="card-img">
-                        <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-01.jpeg" alt="" />
-                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
-                        </a>
-                     </div>
-                     <div class="card-body">
-                        <h4 class="card-title">
-                           <a href="#">Lawn & garden care</a>
-                        </h4>
-                     </div>
-                  </div>
+        <!--Testmonial -->
+
+        <div class="container">
+         <div id="demo" class="carousel slide" data-ride="carousel">
+             <div class="carousel-inner">
+               <div class="carousel-item active">
+                 <div class="carousel-caption caption">
+                   <p>If Shai Reznik's TDD videos don't convince you to add automated testing your code,
+                       I don't know what will.This was the very best explanation of frameworks for brginners 
+                       that I've ever seen.
+                   </p>
+                   <img src="https://i.imgur.com/lE89Aey.jpg">
+                   <div id="image-caption">Nick Doe</div>
+                 </div>   
                </div>
-               <div class="col-lg-4 col-sm-6 portfolio-item">
-                  <div class="card h-100">
-                     <div class="card-img">
-                        <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-02.jpeg" alt="" />
-                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
-                        </a>
-                     </div>
-                     <div class="card-body">
-                        <h4 class="card-title">
-                           <a href="#">Lawn renovation</a>
-                        </h4>
-                     </div>
-                  </div>
+               <div class="carousel-item">
+                 <div class="carousel-caption caption">
+                   <p>If Shai Reznik's TDD videos don't convince you to add automated testing your code,
+                     I don't know what will.This was the very best explanation of frameworks for brginners 
+                     that I've ever seen.</p>
+                     <img src="https://i.imgur.com/QptVdsp.jpg" class="img-fluid">
+                     <div id="image-caption">Cromption Greves</div>
+                 </div>   
                </div>
-               <div class="col-lg-4 col-sm-6 portfolio-item">
-                  <div class="card h-100">
-                     <div class="card-img">
-                        <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-03.jpeg" alt="" />
-                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
-                        </a>
-                     </div>
-                     <div class="card-body">
-                        <h4 class="card-title">
-                           <a href="#">Tree planting</a>
-                        </h4>
-                     </div>
-                  </div>
+               <div class="carousel-item">
+                 <div class="carousel-caption caption">
+                   <p>If Shai Reznik's TDD videos don't convince you to add automated testing your code,
+                     I don't know what will.This was the very best explanation of frameworks for brginners 
+                     that I've ever seen.</p>
+                     <img src="https://i.imgur.com/jQWThIn.jpg" class="img-fluid">
+                     <div id="image-caption">Harry Mon</div>
+                 </div>   
                </div>
-               <div class="col-lg-4 col-sm-6 portfolio-item">
-                  <div class="card h-100">
-                     <div class="card-img">
-                        <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-04.jpeg" alt="" />
-                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
-                        </a>
-                     </div>
-                     <div class="card-body">
-                        <h4 class="card-title">
-                           <a href="#">Compost transportation</a>
-                        </h4>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-sm-6 portfolio-item">
-                  <div class="card h-100">
-                     <div class="card-img">
-                        <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-05.jpg" alt="" />
-                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
-                        </a>
-                     </div>
-                     <div class="card-body">
-                        <h4 class="card-title">
-                           <a href="#">Growing plants</a>
-                        </h4>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-sm-6 portfolio-item">
-                  <div class="card h-100">
-                     <div class="card-img">
-                        <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-01.jpeg" alt="" />
-                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
-                        </a>
-                     </div>
-                     <div class="card-body">
-                        <h4 class="card-title">
-                           <a href="#">Straw removal</a>
-                        </h4>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <!-- /.row -->
-        </div>
+             </div>
+             <a class="carousel-control-prev" href="#demo" data-slide="prev">
+               <i class='fas fa-arrow-left test-icon'></i>
+             </a>
+             <a class="carousel-control-next" href="#demo" data-slide="next">
+               <i class='fas fa-arrow-right test-icon'></i>
+             </a>
+           </div>
+           
+     </div>
+
         <hr>
         <!-- Get In Touch Now Section -->
         <div class="row mb-4">
