--- a/services.html
+++ b/services.html
@@ -53,11 +53,13 @@
       </div>
   </div>
 </nav>
+	
 	<!-- full Title -->
-  <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')" >
-		<div class="container">
+	<div class="full-title" style="background-image: url('images/blog-img-01.jpeg')" >
+		<div class="container" >
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3">Blog
+			<h1 class="mt-4 mb-3">Our services
+
 			</h1>
 		</div>
 	</div>
@@ -69,141 +71,107 @@
 				<li class="breadcrumb-item">
 					<a href="index.html">Home</a>
 				</li>
-				<li class="breadcrumb-item active">Blog</li>
+				<li class="breadcrumb-item active">Our services</li>
 			</ol>
 		</div>
 
-		<div class="row">
-        <!-- Post Content Column -->
-			<div class="col-lg-8">
-
-				<!-- Post Content -->
-				<p class="lead">Animal welfare and environmental issues</p>
-
-				<p>Sara E. Place, in Advances in Agricultural Animal Welfare, 2018</p>
-
-				<p>Environmental sustainability and animal welfare are often viewed as two important but separate issues. However, there is a nexus between these two issues. In the face of increasing global demand for animal protein and growing public scrutiny of animal agriculture from both an animal welfare and environmental sustainability perspective, research is needed to explore this nexus and develop creative “win-win” solutions. This chapter provides an overview of important environmental
-           sustainability issues related to animal agriculture, and provides examples of synergies and trade-offs between environmental sustainability and animal welfare.</p>
-
-				<blockquote class="blockquote">
-					<p class="mb-0">Application of nanotechnology, nanofiltration, and drinking and wastewater treatment—a vision for the future</p>
-				</blockquote>
-
-				<p>Sukanchan Palit, in Water Purification, 2017</p>
-
-				<p>Environmental sustainability, provision of clean drinking water and the road toward progress are the vision of tomorrow. Successful environmental sustainability and global water initiative are in the process of new scientific vision.
-           Provision of clean drinking water stands as a major prerogative of successful sustainable development in developed and developing countries.</p>
-
-			<hr>
-
-			
-			<div class="blog-right-side">
-				<!-- Comments Form -->
-				<div class="card my-4">
-					<h5 class="card-header">Leave a Comment:</h5>
-					<div class="card-body">
-						<form>
-							<div class="form-group">
-								<textarea class="form-control" rows="3"></textarea>
-							</div>
-							<button type="submit" class="btn btn-primary">Submit</button>
-						</form>
-					</div>
-				</div>
-			</div>
-
-          <!-- Single Comment -->
-          <div class="media mb-4">
-            <img class="d-flex mr-3 rounded-circle" src="images/testi_01.png" alt="">
-            <div class="media-body">
-              <h5 class="mt-0">Franck</h5>
-              Excellent article; it was very informative. ESG is unquestionably the future of business management.
+        <!-- Portfolio Section -->
+        <div class="portfolio-main">
+            <h2>Our Portfolio</h2>
+            <div class="row">
+               <div class="col-lg-4 col-sm-6 portfolio-item">
+                  <div class="card h-100">
+                     <div class="card-img">
+                        <a href="#">
+                           <img class="card-img-top" src="images/portfolio-img-01.jpeg" alt="" />
+                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
+                        </a>
+                     </div>
+                     <div class="card-body">
+                        <h4 class="card-title">
+                           <a href="#">Lawn & garden care</a>
+                        </h4>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-sm-6 portfolio-item">
+                  <div class="card h-100">
+                     <div class="card-img">
+                        <a href="#">
+                           <img class="card-img-top" src="images/portfolio-img-02.jpeg" alt="" />
+                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
+                        </a>
+                     </div>
+                     <div class="card-body">
+                        <h4 class="card-title">
+                           <a href="#">Lawn renovation</a>
+                        </h4>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-sm-6 portfolio-item">
+                  <div class="card h-100">
+                     <div class="card-img">
+                        <a href="#">
+                           <img class="card-img-top" src="images/portfolio-img-03.jpeg" alt="" />
+                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
+                        </a>
+                     </div>
+                     <div class="card-body">
+                        <h4 class="card-title">
+                           <a href="#">Tree planting</a>
+                        </h4>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-sm-6 portfolio-item">
+                  <div class="card h-100">
+                     <div class="card-img">
+                        <a href="#">
+                           <img class="card-img-top" src="images/portfolio-img-04.jpeg" alt="" />
+                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
+                        </a>
+                     </div>
+                     <div class="card-body">
+                        <h4 class="card-title">
+                           <a href="#">Compost transportation</a>
+                        </h4>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-sm-6 portfolio-item">
+                  <div class="card h-100">
+                     <div class="card-img">
+                        <a href="#">
+                           <img class="card-img-top" src="images/portfolio-img-05.jpg" alt="" />
+                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
+                        </a>
+                     </div>
+                     <div class="card-body">
+                        <h4 class="card-title">
+                           <a href="#">Growing plants</a>
+                        </h4>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-sm-6 portfolio-item">
+                  <div class="card h-100">
+                     <div class="card-img">
+                        <a href="#">
+                           <img class="card-img-top" src="images/portfolio-img-01.jpeg" alt="" />
+                           <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
+                        </a>
+                     </div>
+                     <div class="card-body">
+                        <h4 class="card-title">
+                           <a href="#">Straw removal</a>
+                        </h4>
+                     </div>
+                  </div>
+               </div>
             </div>
-          </div>
-
-          <!-- Comment with nested comments -->
-          <div class="media mb-4">
-            <img class="d-flex mr-3 rounded-circle" src="images/testi_02.png" alt="">
-            <div class="media-body">
-              <h5 class="mt-0">Gustave</h5>
-              Very interesting article, but I'm not sure how we could apply all of those elements in a business setting.
-
-              <div class="media mt-4">
-                <img class="d-flex mr-3 rounded-circle" src="images/testi_01.png" alt="">
-                <div class="media-body">
-                  <h5 class="mt-0">Franck</h5>
-                  It's very simple; all they have to do is follow the ESG governance factor.
-                </div>
-              </div>
-
-              <div class="media mt-4">
-                <img class="d-flex mr-3 rounded-circle" src="images/testi_03.png" alt="">
-                <div class="media-body">
-                  <h5 class="mt-0">Elena</h5>
-                  We implemented ESG in my company, and it made a significant difference in our operations.
-                </div>
-              </div>
-
-            </div>
-          </div>
-
+            <!-- /.row -->
         </div>
-
-        <!-- Sidebar Widgets Column -->
-        <div class="col-md-4 blog-right-side">
-
-          <!-- Search Widget -->
-          <div class="card mb-4">
-            <h5 class="card-header">Search</h5>
-            <div class="card-body">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Categories Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Categories</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">Seeds<div class="invisible">........</div></a>
-                    </li>
-                    <li>
-                      <a href="#">Plants<div class="invisible">........</div></a>
-                    </li>
-                    <li>
-                      <a href="#">Compost</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">Straw<div class="invisible">........</div></a>
-                    </li>
-                    <li>
-                      <a href="#">Tools<div class="invisible">.........</div></a>
-                    </li>
-                    <li>
-                      <a href="#">Fertilizers</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-        </div>
-
-      </div>
       <!-- /.row -->
 
     </div>
@@ -217,8 +185,7 @@
         <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
         <!--headin5_amrc-->
         <p class="mb10">Don't hesitate to contact us if you have any question or inquiries. We would be happy to 
-          answer your question and set up a meeting with you.
-        </p>
+          answer your question and set up a meeting with you.</p>
         <p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
         <p><i class="fa fa-phone"></i> +27 82 560 7965 </p>
         <p><i class="fa fa fa-envelope"></i> SDP@gmail.com </p>
@@ -309,5 +276,8 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Contact form JavaScript -->
+<script src="js/jqBootstrapValidation.js"></script>
+<script src="js/contact_me.js"></script>
 </body>
 </html>
