--- a/about.html
+++ b/about.html
@@ -12,40 +12,48 @@
 	<link href="css/all.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/card.css">
 </head>
 <body>
 	<!-- Navigation -->
-	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
-		<div class="container">
-			
-			<a class="navbar-brand" href="index.html">
-			<img src="images/logo.png" alt="logo" />
-			<a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>  <!-- Need to be change -->
-			</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="fas fa-bars"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-			   <ul class="navbar-nav ml-auto">
-				  <li class="nav-item">
-					 <a class="nav-link" href="index.html">Home</a>
-				  </li>
-				  <li class="nav-item">
-					 <a class="nav-link active" href="about.html">About</a>
-				  </li>
-				  <li class="nav-item">
-					 <a class="nav-link" href="blog-post.html">Blog</a>
-				  </li>
-				  <li class="nav-item">
-					 <a class="nav-link" href="contact.html">Contact</a>
-				  </li>
+ <!-- Navigation -->
+ <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
+	<div class="container">
+		
+		<a class="navbar-brand" href="index.html">
+		<img src="images/logo.png" alt="logo" />
+		<a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>  <!-- Need to be change -->
+		</a>
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="fas fa-bars"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+		   <ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-			   <a class="nav-link" href="faq.html">FaQ</a>
-			 </li>
-			   </ul>
-			</div>
+				 <a class="nav-link active" href="index.html">Home</a>
+			  </li>
+			  <li class="nav-item">
+				 <a class="nav-link" href="services.html">Our services</a>
+			  </li>
+			  <li class="nav-item">
+				 <a class="nav-link" href="about.html">About</a>
+			  </li>
+			  <li class="nav-item">
+				 <a class="nav-link" href="blog-post.html">Blog</a>
+			  </li>
+			  <li class="nav-item">
+				 <a class="nav-link" href="contact.html">Contact</a>
+			  </li>
+		  <li class="nav-item">
+		   <a class="nav-link" href="login.html">Log in</a>
+		 </li>
+		 <li class="nav-item">
+		  <a class="nav-link" href="singup.html">Sing Up</a>
+		</li>
+		   </ul>
 		</div>
-	</nav>
+	</div>
+</nav>
 	  <!-- full Title -->
   <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
 	<div class="container">
@@ -66,6 +74,7 @@
 		</div>
 		<!-- About Content -->
 		<div class="about-main">
+			<div class="wrapper container" >
 			<div class="row">
 				<div class="col-lg-6">
 					<img class="img-fluid rounded mb-4" src="images/about-img.jpeg" alt="" />
@@ -76,7 +85,8 @@
 						 Our aim is to bring awareness to environmental issues and teach our communities ways that we can fight against them.
 						  As a non-profit organization, our main goal is not to make revenues but to bring value through our activities.</p>
 						  <p>The organization is headed by Shaheeda and our Head of Department, Mr. Gregory September. 
-						  Below them are the project managers that were chosen by them, and below those project managers are the members of each of team.
+						  Below them are the project managers that were chosen by them,
+						   and below those project managers are the members of each of team.
 						   When working, our emphasis is always on finding ways to empower our communities and surrounding environment.</p>
 						    <p>Despite its nature as a professional project, we still had the opportunity to spend an enjoyable time working 
 							on it and interacting with members of the communities we were in.
@@ -95,6 +105,7 @@ impactful individuals</p>
 -->
 				</div>
 			</div>
+		
 			<!-- /.row -->
 		</div>
 
@@ -102,71 +113,43 @@ impactful individuals</p>
 		<div class="team-members-box">  
 			<h2>Our Team</h2>
 			<div class="row">
-				<div class="col-sm-3 mb-4">
-				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_01.jpeg" alt="" />
-					<div class="card-body">
-						<h4 class="card-title">Jean Sebastien</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Social Media Representative</h6>
-						<p class="card-text">As a member of the social media team, he was in charge of the garden's social media pages.</p>
-					</div>
-					<div class="card-footer">
-						<ul>
-							<li><a href="https://www.facebook.com/profile.php?id=100008664192029"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						</ul>
+				<div class="col-sm-3 mb-4 card1">
+					<div class="card h-100 text-center">
+					  <img class="card-img-top" src="images/team_01.jpeg" alt="" />
+					  <div class="card-body">
+						  <h2 class="card-title">Jean</h2>
+						  <h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
+						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
+					  </div>
 					</div>
 				  </div>
-				</div>
-				<div class="col-sm-3 mb-4">
+				<div class="col-sm-3 mb-4 card1">
 				  <div class="card h-100 text-center">
 					<img class="card-img-top" src="images/team_02.jpeg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Loic</h4>
+						<h2 class="card-title">Loic</h2>
 						<h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
 						<p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
-						</div>
-					<div class="card-footer">
-						<ul>
-							<li><a href="https://www.facebook.com/profile.php?id=100064692152005"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						</ul>
 					</div>
 				  </div>
 				</div>
-				<div class="col-sm-3 mb-4">
-				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_03.jpeg" alt="" />
-					<div class="card-body">
-						<h4 class="card-title">Jetro</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
-						<p class="card-text">He spearheaded the art department, which created all of the decorations at Oude Molen Food Garden. His contributions brought the garden to life.
-						</div>
-					<div class="card-footer">
-						<ul>
-							<li><a href="https://www.facebook.com/jetrodacosta"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						</ul>
-					</div>
-				  </div>
-				</div>
-				<div class="col-sm-3 mb-4">
+				<div class="col-sm-3 mb-4 card1">
 					<div class="card h-100 text-center">
 					  <img class="card-img-top" src="images/team_03.jpeg" alt="" />
 					  <div class="card-body">
-						  <h4 class="card-title">Jordan</h4>
-						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
-						  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+						  <h2 class="card-title">Jetro</h2>
+						  <h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
+						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					  </div>
-					  <div class="card-footer">
-						  <ul>
-							  <li><a href="https://www.facebook.com/JayNtaku19"><i class="fab fa-facebook-f"></i></a></li>
-							  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							  <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						  </ul>
+					</div>
+				  </div>
+				  <div class="col-sm-3 mb-4 card1">
+					<div class="card h-100 text-center">
+					  <img class="card-img-top" src="images/team_04.jpeg" alt="" />
+					  <div class="card-body">
+						  <h2 class="card-title">Jordan</h2>
+						  <h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
+						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					  </div>
 					</div>
 				  </div>
@@ -200,6 +183,7 @@ impactful individuals</p>
 		</div>
 		<!-- /.container -->
 	</div>
+</div>
 
     <!--footer starts from here-->
     <footer class="footer">
