--- a/contact.html
+++ b/contact.html
@@ -15,36 +15,44 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
-      <div class="container">
-          <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" alt="logo" />
-          <a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>
-          </a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+ <!-- Navigation -->
+ <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
+  <div class="container">
+      
+      <a class="navbar-brand" href="index.html">
+      <img src="images/logo.png" alt="logo" />
+      <a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>  <!-- Need to be change -->
+      </a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fas fa-bars"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                 <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                 <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                 <a class="nav-link" href="blog-post.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                 <a class="nav-link active" href="contact.html">Contact</a>
-              </li>
-          <li class="nav-item">
-           <a class="nav-link" href="faq.html">FaQ</a>
-         </li>
-           </ul>
-          </div>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+               <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link " href="services.html">Our services</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="blog-post.html">Blog</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        <li class="nav-item">
+         <a class="nav-link" href="login.html">Log in</a>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="singup.html">Sing Up</a>
+      </li>
+         </ul>
       </div>
-  </nav>
+  </div>
+</nav>
 	
 	<!-- full Title -->
 	<div class="full-title" style="background-image: url('images/blog-img-01.jpeg')">
